fixed stuff
deleted the bottom scrollbar in For Families and also added blobs in that subpage

--- a/exhibitions/css/style-exhb.css
+++ b/exhibitions/css/style-exhb.css
@@ -73,45 +73,38 @@ nav li.active a {
 nav li:hover a{
     border-bottom: 3px solid #0f0f0f;
 }
-/* .exhibitions:hover {
-    background-color: #108CB0;
+.hero-section {
+    /* background-color: #F9C411; */
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 8.33%;
+    margin: 1.5% 0 2.5% 0;
 }
-.exhibitions {
-    background-color: #108CB0;
+.hero-container {
+    /* background-color: #e2e2e2; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.exhibitions a {
-    color: #fafafa;
-}
-.for-families:hover {
-    background-color: #107F00;
-}
-.about:hover {
-    background-color: #ED6915;
-}
-.contact:hover {
-    background-color: #E33877;
-} */
 .img-hero{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-
 .small-img-hero{
     max-width: 100%;
     max-height: 100%;
     filter: grayscale(0%);
-    
     transition: 0.5s;
-    
 }
 .container {
     width: 100%;
     height: auto;
     margin: 0 8.33%;
     padding: 0;
-        /* --bs-gutter-x: 1.5rem; */
-    /* max-width: auto; */
 }
 .small-img-hero:hover {
     filter: grayscale(100%);
