--- a/for-families/src/styles.css
+++ b/for-families/src/styles.css
@@ -30,14 +30,33 @@ body {
   display: flex;
   flex-direction: column;
 }
-/* i know the name i yellow but its green, i will change it later */
-.yellow-blob {
+.top-blob {
   position: absolute;
   left: 0;
-  top: 95px;
-  height: 96%;
+  top: 130px;
+  height: auto;
   width: auto;
   z-index: -1;
+  transform: scaleY(-1); /* Horizontal flip */
+}
+.green-blob {
+  position: absolute;
+  left: 0;
+  top: 240px;
+  height: 80%;
+  width: auto;
+  z-index: -1;
+  transform: scaleY(-1); /* Horizontal flip */
+  
+}
+.right-blob {
+  position: absolute;
+  right: 0;
+  top: 1000px;
+  height: 100%;
+  width: auto;
+  z-index: -1;
+  rotate: 180deg;
   /* opacity: 0.9; */
 }
 header {
@@ -83,24 +102,6 @@ nav li.active a {
 nav li a:hover {
   border-bottom: 3px solid #0f0f0f;
 }
-/* .exhibitions:hover {
-  background-color: #108cb0;
-}
-.for-families:hover {
-  background-color: #107f00;
-}
-.for-families {
-  background-color: #107f00;
-}
-.for-families a {
-  color: #fafafa;
-}
-.about:hover {
-  background-color: #ed6915;
-}
-.contact:hover {
-  background-color: #e33877;
-} */
 .hero-section {
   /* background-color: red; */
   height: auto;
@@ -169,7 +170,6 @@ nav li a:hover {
 .section-1,
 .section-3 {
   background-color: green;
-  border-radius: 7px;
   position: relative;
   margin: 0;
   padding: 0;
@@ -179,7 +179,7 @@ nav li a:hover {
 .section-2 {
   background-color: #fafafa;
   position: relative;
-  margin: 10px;
+  margin: 0;
   padding: 0;
   width: 100vw;
 }
